# vega

./: CMakeLists.txt  Doxyfile
.github/workflows/: ci.yml
benchmarks/: benchmark_my_class.cpp
include/my_project/: my_class.h
my_project/: my_class.h
src/: my_class.cpp
tests/: test_my_class.cpp
